@@ -127,7 +127,9 @@ static void _CallPythonObject(void *mem,
 	PyObject *result;
 	PyObject *arglist = NULL;
 	int nArgs;
+#ifdef WITH_THREADS
 	PyGILState_STATE state = PyGILState_Ensure();
+#endif
 
 	nArgs = PySequence_Length(converters);
 	/* Hm. What to return in case of error?
@@ -235,8 +237,9 @@ if (x == NULL) _AddTraceback(what, __FILE__, __LINE__ - 1), PyErr_Print()
 	Py_XDECREF(result);
   Done:
 	Py_XDECREF(arglist);
-	
+#ifdef WITH_THREADS	
 	PyGILState_Release(state);
+#endif
 }
 
 static void closure_fcn(ffi_cif *cif,
@@ -397,12 +400,18 @@ STDAPI DllGetClassObject(REFCLSID rclsid,
 			 LPVOID *ppv)
 {
 	long result;
+#ifdef WITH_THREADS
 	PyGILState_STATE state;
+#endif
 
 	LoadPython();
+#ifdef WITH_THREADS
 	state = PyGILState_Ensure();
+#endif
 	result = Call_GetClassObject(rclsid, riid, ppv);
+#ifdef WITH_THREADS
 	PyGILState_Release(state);
+#endif
 	return result;
 }
 
@@ -454,9 +463,13 @@ long Call_CanUnloadNow(void)
 STDAPI DllCanUnloadNow(void)
 {
 	long result;
+#ifdef WITH_THREADS
 	PyGILState_STATE state = PyGILState_Ensure();
+#endif
 	result = Call_CanUnloadNow();
+#ifdef WITH_THREADS
 	PyGILState_Release(state);
+#endif
 	return result;
 }
 
